[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "ffmpeg==1.4",
    "ffmpegio-core==0.10.0",
    "ffmpegio==0.10.0.post0",
    "python-dotenv>=1.0.1",
    "telegram>=0.0.1",
    "yt-dlp>=2025.1.15",
    "ffmpeg-progress-yield==0.11.1",
]
